# recordmydesktop-x264

./: CMakeLists.txt  config.h.in
src/: CMakeLists.txt  rmd_cache.c  rmd_init_encoder.c  rmd_load_cache.c  rmd_macro.h  rmd_parseargs.c  rmd_rescue.c  rmd_yuv_utils.h
